--- a/js/kadai5.html
+++ b/js/kadai5.html
@@ -23,14 +23,26 @@
     }
 
     function change_image(){
-        type = getRandomInt(1,3);//1~3の値でランダム
+        type = getRandomType(type);//自分をののぞいたほかの写真でランダム
         document.images["myImg"].src = "img" + type + ".png"; 
     }
 
-    function getRandomInt(min, max) {
-        min = Math.ceil(min);
-        max = Math.floor(max);
-        return Math.floor(Math.random() * (max - min)) + min;
+    function getRandomType(type){
+        num = 0;
+        if(Math.random() < 0.5){
+            num = -1;
+        }
+        else{
+            num = 1;
+        }
+        type = type + num;
+        if(type  == 0){
+            type = 3;
+        }
+        else if(type  == 4){
+            type = 1;
+        }
+        return type;
     }
   </script>
  </body>
