--- a/js/kadai2-6.html
+++ b/js/kadai2-6.html
@@ -17,13 +17,19 @@
       setin_cookie("hobby", user_hobby);//hobbyという属性でcookieに格納
       setin_cookie("count", 1);//countという属性でcookieに格納 初めて入ったので値は1
       
-      document.cookie = "expires=" + extime;//期限の代入
+      // document.cookie = "expires=" + extime;//期限の代入
     }
 
     function setin_cookie(key, value){//key(属性)に対するvalue(値)をcookieに格納する関数
       //ACCII変換してcookieに入力
+      var presentDay, dd, extime;
+      presentDay = new Date( );
+      dd = presentDay.getDate( );
+      dd=dd+7;
+      presentDay.setDate(dd);
+      extime = presentDay.toGMTString();//GMT変換
       var cData = key + "=" + escape(value) +";";
-      document.cookie = cData;
+      document.cookie = cData + "expires="+extime;
     }
 
     function change_data(){//cookieの中身を変更する関数
