コメント文追記

--- a/js/kadai2-6.html
+++ b/js/kadai2-6.html
@@ -2,6 +2,10 @@
  <head>
   <title>2週目(6)</title>
   <script type="text/javascript">
+  //cookieの保存はタブを閉じたら保存はされずリロード時に動作の確認が可能
+  //またタブを閉じずに追加でタブを開いても同様に確認可能
+  //これはFireFoxのcookieの設定であるためタブを閉じて再度タブを開くときは
+  //サーバーなどにデータベースとして保存することも考えられる。
     var element;//cookieの要素を格納するグローバル変数
     //最初のcookieに入力する関数
     function init_data(){
@@ -16,8 +20,6 @@
       setin_cookie("name", user_name);//nameという属性でcookieに格納
       setin_cookie("hobby", user_hobby);//hobbyという属性でcookieに格納
       setin_cookie("count", 1);//countという属性でcookieに格納 初めて入ったので値は1
-      
-      // document.cookie = "expires=" + extime;//期限の代入
     }
 
     function setin_cookie(key, value){//key(属性)に対するvalue(値)をcookieに格納する関数
