kadai2-4のコメント文 2-6の修正

--- a/js/kadai2-4.html
+++ b/js/kadai2-4.html
@@ -2,6 +2,7 @@
  <head>
   <title>2週目(4)</title>
   <script type="text/javascript">
+  //firefoxのバージョンがiedと自身のfirefoxのバージョンが異なるためiedでの実行は確認できなかった
     var page = new Array(5);//windowを示す配列でグローバル変数
     
     function createNewWindow(uri,n){
