--- a/js/kadai3-2.html
+++ b/js/kadai3-2.html
@@ -1,5 +1,6 @@
 <html>
  <head>
+    <title>3週目(2)</title>
   <script type="text/javascript">
     function scrclr () {//初期化を行う
         for (i=0; i<document.tstform.length; i++) {
