--- a/js/sample3.html
+++ b/js/sample3.html
@@ -1,18 +1,14 @@
 <html>
  <head>
   <script type="text/javascript">
-  var i = 0;
-  function cclick () {
-  i ++;
-  document.tform1.txt.value = i;
+  function visPass () {
+    window.alert (document.forms[0].elements[0].value);
   }
-
   </script>
  </head>
  <body>
-  <form name = "tform1">
-  <input type = "button" onclick = "cclick()" value = "press here">
-  <input type = "text" size = 3 name = "txt">回目のマウスクリックです.
+  <form>
+  Input password: <input type = "password" size="10" onchange = "visPass()">
   </form>
  </body>
-</html>
+</html
