--- a/js/kadai3-5-2.html
+++ b/js/kadai3-5-2.html
@@ -8,9 +8,11 @@
         var diff = nextYear - now - 9 * 3600000;//時差の分の計算
         var spaceDay = diff / 86400000;
         var spaceHour = ((diff % 86400000) / 3600000);
-        var spaceSecond = ((diff % 86400000) % 3600000) / 1000;
+        var spaceMinutes = ((diff % 86400000) % 3600000) / 60000; 
+        var spaceSecond = (((diff % 86400000) % 3600000) % 60000) / 1000;
         document.timemenu.day.value = parseInt(spaceDay);
         document.timemenu.hour.value = parseInt(spaceHour);
+        document.timemenu.minutes.value = parseInt(spaceMinutes);
         document.timemenu.second.value = parseInt(spaceSecond);
     }
   </script>
@@ -19,6 +21,7 @@
   <form name = "timemenu">
     残り<input type="text" name = "day" size = 3>日
     <input type="text" name = "hour" size = 2>時間
+    <input type="text" name = "minutes" size = 2>分
     <input type="text" name = "second" size = 3>秒
  </form>
  <input type="button" value="close" onclick="window.close()">
