コメント文の追記

--- a/js/kadai3-1.html
+++ b/js/kadai3-1.html
@@ -4,11 +4,11 @@
   <script language="JavaScript">
       var uri = "https://www.ied.inf.uec.ac.jp/support/projects/ied-support/wiki";
       function passMatch(){
-            if(document.inputinform.id.value == document.inputinform.pass.value){
-                  window.open(uri,"ied","width=400, height=600");
+            if(document.inputinform.id.value == document.inputinform.pass.value){//入力ホームが一致したとき
+                  window.open(uri,"ied","width=400, height=600");//ウインドウを開く
             }
             else{
-                  alert("「Password incorrect」");
+                  alert("「Password incorrect」");//警告文
             }
       }
   </script>
