--- a/js/kadai3-3.html
+++ b/js/kadai3-3.html
@@ -5,7 +5,7 @@
    function move(){
     var selected = document.imgmenu.images.selectedIndex;
     selected = parseInt(selected) + 1;//Indexの範囲は0からのため1をたしてそろえる
-    document.images["myImg"].src = "imgGreece" + selected + ".jpg";
+    document.images["myImg"].src = "imgGreece" + selected + ".jpg";//選択されてる画像を出力
    }
   </script>
  </head>
