--- a/js/kadai3-4.html
+++ b/js/kadai3-4.html
@@ -5,7 +5,7 @@
    function colorChange(){
         for (i=0; i<document.colormenu.colors.length; i++){
             if(document.colormenu.elements[i].checked){
-                document.getElementById("text").style.color = document.colormenu.elements[i].value;
+              document.getElementById("text").style.color = document.colormenu.elements[i].value;//選択した色に変える
             }
         }
     }
