--- a/js/kadai3-5-1.html
+++ b/js/kadai3-5-1.html
@@ -2,8 +2,8 @@
  <head>
   <script type="text/javascript">
    function wopen(){
-    var selected = document.bkmkmenu.bkmks.selectedIndex;
-    window.open(document.bkmkmenu.bkmks.options[selected].value,"new","width=400, height=600");
+    var selected = document.bkmkmenu.bkmks.selectedIndex;//選択したlistの番号を取得
+    window.open(document.bkmkmenu.bkmks.options[selected].value,"new","width=400, height=600");//選択したブックマークのリンクを開く
    }
   </script>
  </head>
