--- a/js/kadai3-5.html
+++ b/js/kadai3-5.html
@@ -3,8 +3,8 @@
     <title>3週目(5)</title>
   <script type="text/javascript">
    function move(){
-        var selected = document.bkmkmenu.bkmks.selectedIndex;
-        window.open(document.bkmkmenu.bkmks.options[selected].value);
+    var selected = document.bkmkmenu.bkmks.selectedIndex;//選択した番号を取得
+    window.open(document.bkmkmenu.bkmks.options[selected].value);//選択したhtmlファイルを開く
    }
   </script>
  </head>
