--- a/js/kadai3-5-3.html
+++ b/js/kadai3-5-3.html
@@ -3,6 +3,7 @@
   <script type="text/javascript">
     var i = 0;
     function change(){
+        //呼び出される度にグローバル変数をインクリメント
         if(i == 4){
             i = 0;
         }
@@ -11,19 +12,19 @@
         }
         switch(i){
             case 0:
-                document.body.style.backgroundColor = '#008000';
+                document.body.style.backgroundColor = '#008000';//緑
                 break;
             case 1:
-                document.body.style.backgroundColor = '#0000ff';
+                document.body.style.backgroundColor = '#0000ff';//青
                 break;
             case 2:
-                document.body.style.backgroundColor = '#ffff00';
+                document.body.style.backgroundColor = '#ffff00';//黄
                 break;
             case 3:
-                document.body.style.backgroundColor = '#ff0000';
+                document.body.style.backgroundColor = '#ff0000';//赤
                 break;
             case 4:
-                document.body.style.backgroundColor = '#ccffcc';
+                document.body.style.backgroundColor = '#ccffcc';//薄い緑
                 break;
         }
     }
@@ -32,7 +33,7 @@
  <body>
  <input type="button" value="close" onclick="window.close()">
     <script type="text/javascript">
-        setInterval(change,3000);
+        setInterval(change,3000);//3秒毎に処理
     </script>
  </body>
 </html>
