--- a/js/kadai4.html
+++ b/js/kadai4.html
@@ -2,11 +2,16 @@
  <head>
     <title>4週目</title>
   <script type="text/javascript">
-   
+    var gameCount = 20;
+    var stButton;
+    function clickStartButton(){
+        gameCount = 20;
+        document.getElementById("st").value = 20;
+    }
   </script>
  </head>
  <body>
-    <input type="button" name="st" value="start" style="widht:50px; height: 50px; font-size:20px;position: relative;left: 131px; top: 0px">
+    <input type="button" id="st" value="start" style="widht:50px; height: 50px; font-size:20px;position: relative;left: 131px; top: 0px" onclick="clickStartButton()">
     <form name="g_switch">
         <input type="button" name="gs_1" value="SW1" style="widht:50px; height: 50px; font-size:20px;">
         <input type="button" name="gs_2" value="SW2" style="widht:50px; height: 50px; font-size:20px;">
@@ -14,5 +19,8 @@
         <input type="button" name="gs_4" value="SW4" style="widht:50px; height: 50px; font-size:20px;">
         <input type="button" name="gs_5" value="SW5" style="widht:50px; height: 50px; font-size:20px;">
     </form>
+    <script type="text/javascript">
+        
+    </script>
  </body>
 </html>
