--- a/js/kadai4.html
+++ b/js/kadai4.html
@@ -4,9 +4,15 @@
   <script type="text/javascript">
     var gameCount = 20;
     var stButton;
+    function update(){
+        gameCount--;
+        document.getElementById("st").value = gameCount;
+    }
+
     function clickStartButton(){
         gameCount = 20;
         document.getElementById("st").value = 20;
+        setInterval(update, 1000);
     }
   </script>
  </head>
