--- a/js/kadai4.html
+++ b/js/kadai4.html
@@ -86,7 +86,9 @@
             else{
                 sum -= parseInt(document.g_switch.elements[num].value);//最大値じゃなかったとき減算
             }
-            document.result.total.value = sum;//計算後のスコアの代入
+            document.result.score.value = sum;//計算後のスコアの代入
+            document.result.bar.value = sameCount;//スライダーに正しくタップした数を代入
+            document.result.check.value = sameCount;//正しくタップした数を代入
             gswflag = true;
         }
         else{
@@ -104,11 +106,10 @@
         <input type="button" name="gs_5" value="SW5" onclick="gSwitch(5)" style="width:60px; height: 50px; font-size:20px;">
     </form>
 
-
-    <!-- スコアは右の方がよさげ -->
     <form name="result">
-        <hr width="200">
-        スコア：<input type = "text" name = "total" size = 4>点
+        <input type="range" name="bar" value="0" min="0" max="20" step="1">
+        <output name="check">0</output><br>
+        スコア：<output id="total" name="score">0</output>点
     </form>
     <script type="text/javascript">
     </script>
