--- a/js/kadai3-5.html
+++ b/js/kadai3-5.html
@@ -14,6 +14,7 @@
     <option value = "kadai3-5-1.html" onclick="move()">1
     <option value = "kadai3-5-2.html" onclick="move()">2
     <option value = "kadai3-5-3.html" onclick="move()">3
+    <option value = "kadai3-5-4.html" onclick="move()">4
   </select>
  </form>
  </body>
